--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,6 +18,7 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 .navigation input#search { width: 70%; }
 .navigation input { margin-left: 0; width: 90%; }
 .navigation .filter { width: 12px; margin-left: 4px; }
+.navigation .location { max-height: 600px; overflow: auto; }
 .navigation ul#locations { margin: 10px 0; padding: 0 2px; }
 .navigation ul#locations li { color: #fff; list-style-type: none; padding: 10px 0; border-bottom: 1px solid #ccc; }
 .navigation #listDetails { color: #fff; height: 100px; display: none; }
