--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,7 +5,7 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 #map #markerDetails { height: 200px; }
 #map .rating { position: relative; top: 5px;  }
 #map .yelp_img { float: left; margin-right: 15px; }
-.navigation { background-color: #63632d; padding: 5px;  position: absolute; z-index: 3; top: 60px; bottom: 0; width: 250px; left: -260px; }
+.navigation { background-color: #63632d; padding: 5px;  position: absolute; z-index: 3; top: 60px; height: 90%; width: 250px; left: -260px; box-sizing: border-box; -moz-box-sizing: border-box; }
 .navigation.open { left: 0; }
 .navigation #handle { width: 20px; height: 30px; position: absolute; right: -20px; background-color: #63632d; cursor: pointer; }
 .navigation #handle:before { content: ''; display: block; height: 0; width: 0; border-bottom: 5px solid transparent; border-top: 5px solid transparent; border-right: 5px solid #fff; position: absolute; top: 10px; }
@@ -18,7 +18,7 @@ html, body { width: 100%; height: 100%; margin: 0; padding: 0; }
 .navigation input#search { width: 70%; }
 .navigation input { margin-left: 0; width: 90%; }
 .navigation .filter { width: 12px; margin-left: 4px; }
-.navigation .location { max-height: 600px; overflow: auto; }
+.navigation .location { position: absolute; top: 265px; bottom: 10px; right: 5px; left: 5px;overflow: auto; }
 .navigation ul#locations { margin: 10px 0; padding: 0 2px; }
 .navigation ul#locations li { color: #fff; list-style-type: none; padding: 10px 0; border-bottom: 1px solid #ccc; }
 .navigation #listDetails { color: #fff; height: 100px; display: none; }
